--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	
 	<!--Informacion del proyecto -->
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.example</groupId>
-	<artifactId>junit5-mps-uma</artifactId>
+	<groupId>es.uma</groupId>
+	<artifactId>lab1</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	
 	<!--Propiedades del proyecto y maven-->
